traefik/nginx-default-ingressclass.yaml
apiVersion: networking.k8s.io/v1

kind: IngressClass

metadata:

  labels:

    app.kubernetes.io/component: controller

  name: ingress-nginx

  annotations:

    ingressclass.kubernetes.io/is-default-class: "false"

spec:

  controller: k8s.io/ingress-nginx
