traefik/ingressroute-traefik.yaml
# dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`techlabenterprises.com`) && (PathPrefix(`/dashboard`))
      kind:  Rule
      services:
        - name: api@internal
          kind: TraefikService
